# ChangeLog for x11-apps/xbiff
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-apps/xbiff/ChangeLog,v 1.36 2011/02/12 11:26:13 hwoarang Exp $

  12 Feb 2011; Markos Chandras <hwoarang@gentoo.org> xbiff-1.0.3.ebuild:
  Stable on amd64 wrt bug #354237

*xbiff-1.0.3 (25 Jan 2011)

  25 Jan 2011; Tomáš Chvátal <scarabeus@gentoo.org> +xbiff-1.0.3.ebuild:
  Version bump

  21 Oct 2010; Tomáš Chvátal <scarabeus@gentoo.org>
  -xbiff-1.0.1-r1.ebuild:
  old

  19 Sep 2010; Raúl Porcel <armin76@gentoo.org> xbiff-1.0.2.ebuild:
  s390/sh/sparc stable wrt #327777

  22 Jul 2010; Markus Meier <maekke@gentoo.org> xbiff-1.0.2.ebuild:
  arm stable, bug #327777

  15 Feb 2010; Joseph Jezak <josejx@gentoo.org> xbiff-1.0.2.ebuild:
  Marked ppc/ppc64 stable for bug #302046.

  11 Feb 2010; Jeroen Roovers <jer@gentoo.org> xbiff-1.0.2.ebuild:
  Stable for HPPA (bug #302046).

  08 Feb 2010; Christian Faulhammer <fauli@gentoo.org> xbiff-1.0.2.ebuild:
  stable x86, bug 302046

  30 Jan 2010; Samuli Suominen <ssuominen@gentoo.org> xbiff-1.0.2.ebuild:
  amd64 stable wrt #302046

*xbiff-1.0.2 (19 Dec 2009)

  19 Dec 2009; Tomáš Chvátal <scarabeus@gentoo.org> +xbiff-1.0.2.ebuild:
  Version bump.

  07 Jul 2009; Jeroen Roovers <jer@gentoo.org> xbiff-1.0.1-r1.ebuild:
  Stable for HPPA too.

  22 Apr 2009; Brent Baude <ranger@gentoo.org> xbiff-1.0.1-r1.ebuild:
  Marking xbiff-1.0.1-r1 ppc64 stable for bug 264982

  17 Apr 2009; Jeroen Roovers <jer@gentoo.org> xbiff-1.0.1-r1.ebuild:
  Marked ~hppa too.

  11 Apr 2009; nixnut <nixnut@gentoo.org> xbiff-1.0.1-r1.ebuild:
  ppc stable #264982

  09 Apr 2009; Raúl Porcel <armin76@gentoo.org> xbiff-1.0.1-r1.ebuild:
  arm/s390/sh stable wrt #264982

  06 Apr 2009; Friedrich Oslage <bluebird@gentoo.org> xbiff-1.0.1-r1.ebuild:
  Stable on sparc, bug #264982

  05 Apr 2009; Markus Meier <maekke@gentoo.org> xbiff-1.0.1-r1.ebuild:
  x86 stable, bug #264982
