@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/xbiff/xbiff-1.0.3.ebuild,v 1.2 2011/02/12 11:26:13 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/xbiff/xbiff-1.0.3.ebuild,v 1.3 2011/02/12 17:12:11 fauli Exp $
 
 EAPI=3
 
@@ -8,7 +8,7 @@ inherit xorg-2
 
 DESCRIPTION="mailbox flag for X"
 
-KEYWORDS="amd64 ~arm ~hppa ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86"
+KEYWORDS="amd64 ~arm ~hppa ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc x86"
 IUSE=""
 
 RDEPEND="x11-libs/libXaw
