@@ -1,6 +1,6 @@
 # Copyright 1999-2011 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/xinit/xinit-1.3.0-r2.ebuild,v 1.2 2011/02/12 11:26:33 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/xinit/xinit-1.3.0-r2.ebuild,v 1.3 2011/02/12 17:09:59 fauli Exp $
 
 EAPI=3
 
@@ -9,7 +9,7 @@ inherit xorg-2
 DESCRIPTION="X Window System initializer"
 
 LICENSE="${LICENSE} GPL-2"
-KEYWORDS="~alpha amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~x86-fbsd"
+KEYWORDS="~alpha amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc x86 ~x86-fbsd"
 IUSE="+minimal"
 
 RDEPEND="
