@@ -1,6 +1,10 @@
 # ChangeLog for x11-apps/xinit
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/xinit/ChangeLog,v 1.202 2011/02/12 11:26:33 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/xinit/ChangeLog,v 1.203 2011/02/12 17:09:59 fauli Exp $
+
+  12 Feb 2011; Christian Faulhammer <fauli@gentoo.org>
+  xinit-1.3.0-r2.ebuild:
+  stable x86, bug 354237
 
   12 Feb 2011; Markos Chandras <hwoarang@gentoo.org> xinit-1.3.0-r2.ebuild:
   Stable on amd64 wrt bug #354237
