@@ -1,6 +1,9 @@
 # ChangeLog for x11-apps/xbiff
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/xbiff/ChangeLog,v 1.36 2011/02/12 11:26:13 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/xbiff/ChangeLog,v 1.37 2011/02/12 17:12:11 fauli Exp $
+
+  12 Feb 2011; Christian Faulhammer <fauli@gentoo.org> xbiff-1.0.3.ebuild:
+  stable x86, bug 354237
 
   12 Feb 2011; Markos Chandras <hwoarang@gentoo.org> xbiff-1.0.3.ebuild:
   Stable on amd64 wrt bug #354237
